name:                cch
version:             0.1.0.0
synopsis:            A toy C compiler written in Haskell.
-- description:
homepage:            https://github.com/jbrot/cch#readme
license:             GPL
license-file:        LICENSE
author:              Joshua Brot
maintainer:          jbrot@umich.edu
copyright:           (c) 2017 Joshua Brot
category:            Compiler
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable cch
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
