name:                cch
version:             0.1.0.0
synopsis:            A toy C compiler written in Haskell.
-- description:
homepage:            https://github.com/jbrot/cch#readme
license:             GPL
license-file:        LICENSE
author:              Joshua Brot
maintainer:          jbrot@umich.edu
copyright:           (c) 2017 Joshua Brot
category:            Compiler
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable cch
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Config
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , optparse-applicative >= 0.13.0.0
                     , parsec >= 3.1.11
                     , text >= 1.2.2.1
                     , transformers >= 0.5.2.0
